changed html title and deleted unwanted an un needed componenet

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Webpack Training 1</title>
+		<title>Miss It</title>
 	</head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<body>
